[package]
name = "seselulu-translator"
version = "1.0.0"
description = "A silly language translator for a silly language"
authors = ["Lncvrt"]
edition = "2024"

[lib]
name = "seselulu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = [] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tauri-plugin-os = "2.3.0"

